<resources>
    <string name="app_name">Prooya\n직관기록</string>
    <string name="app_name_title">Prooya 직관기록</string>
    <string name="errorServerIsOff">연결상태가 좋지 않습니다.\n잠시후 다시 시도해 주시기 바랍니다.</string>
    <string name="errorComm">오류가 발생했습니다.\n잠시후 다시 시도해 주세요.</string>
    <string name="error_background">오류가 발생했어요.\n잠시후 다시 시도해 주세요.</string>
    <string name="back_exit">한번더 누르면 종료합니다.</string>

    <string name="team_select">팀선택</string>
    <string name="team_info">prooya는 자신의 팀을 기준으로 기록을 계산합니다. 응원하는 팀을 선택해 주세요.</string>
    <string name="team_select_dialog_change">팀 수정시, 올해 기록은 초기화\n됩니다. 진행하시겠습니까?</string>
    <string name="team_select_dialog_apply">%s\n진행하시겠습니까?</string>

    <string name="dlg_continue">계속</string>
    <string name="dlg_close">닫기</string>
    <string name="dlg_cancel">취소</string>

    <string name="day_game_score">%s : %s</string>
    <string name="day_game_date_single">%s</string>
    <string name="day_game_date_with_starttime">%s</string>

    <string name="history_label">전체기록</string>
    <string name="season_label">%d시즌기록</string>
    <string name="all_label">%d시즌 전체기록</string>

    <string name="w_d_l">%d승%d무%d패</string>
    <string name="seeing_count_season">%s회</string>

    <string name="notification_format">%s - %s(%s) vs %s(%s)</string>

    <string name="win">승</string>
    <string name="draw">무</string>
    <string name="lose">패</string>

    <string name="no_outdoor_seeing">직관을 한번도 안갔어요.</string>
    <string name="history_delete">직관기록이 삭제됩니다.\n계속하시겠습니까?</string>
    <string name="double_header_games">더블헤더 경기입니다.</string>
    <string name="double_header_first">1경기</string>
    <string name="double_header_second">2경기</string>
    <string name="change_season">시즌변경</string>
    <string name="my_team">나의팀</string>
    <string name="possible_change_team">응원하는팀을 변경할 수 있습니다.</string>
    <string name="save">저장</string>
    <string name="saved">저장되었습니다.</string>
    <string name="ask_for_delete_all_histories">모든 기록이 삭제됩니다.\n계속하시겠습니까?</string>
    <string name="search_other_day">경기가 없어요.\n다른날짜를 선택해주세요.</string>
    <string name="init_all_histories">직관기록초기화</string>
    <string name="delete_all_with_login">로그인정보 및 모든 직관기록을 삭제합니다.</string>
    <string name="app">앱</string>
    <string name="version">버전</string>
    <string name="open_license">오픈라이선스</string>
    <string name="select_ok">선택</string>
    <string name="season_select_title">시즌선택</string>
    <string name="default_season">기본 시즌연도 설정</string>
    <string name="set_for_default_year">기본 시즌연도를 설정할 수 있습니다.</string>

    <string name="winning_rate_label">직관기록</string>
    <string name="watching_count">직관횟수</string>
    <string name="viewing_record">직관기록</string>
    <string name="record_team_percentage">팀별통산승률</string>
    <string name="no_plays">직관을 한번도 안갔어요.</string>
    <string name="search_other_game">다른게임</string>

    <string name="tab_menu_0">통계</string>
    <string name="tab_menu_1">시즌기록</string>
    <string name="tab_menu_2">전체기록</string>
    <string name="tab_menu_3">일정</string>
    <string name="tab_menu_4">설정</string>
</resources>