<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.apx5.apx5.ui.statics.StaticsViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity ="center"
        android:fillViewport="true"
        android:layout_marginTop="@dimen/md_0" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/md_15"
            android:background="@color/p_white_10" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_box_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" >

                <TextView
                    android:id="@+id/tv_summary_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textAppearance="@style/PageTitle"
                    android:text="@string/viewing_record" />

                <!-- 직관기록-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_summary"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_250"
                    android:layout_marginTop="@dimen/md_10"
                    android:background="@drawable/border_line_list"
                    app:layout_constraintTop_toBottomOf="@id/tv_summary_label"
                    app:layout_constraintBottom_toBottomOf="parent" >

                    <!-- Circle Progress Bar-->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_circle_progress"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/md_150"
                        android:layout_marginTop="@dimen/md_25"
                        app:layout_constraintBottom_toTopOf="@id/cl_records"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                        <com.ramijemli.percentagechartview.PercentageChartView
                            android:id="@+id/pc_record"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:pcv_mode="ring"
                            app:pcv_backgroundBarColor="@color/p_main_first"
                            app:pcv_orientation="counter_clockwise"
                            app:pcv_animDuration="800"
                            app:pcv_animInterpolator="anticipate_overshoot"
                            app:pcv_progress="0"
                            app:pcv_startAngle="270"
                            app:pcv_textColor="@color/grey_700"
                            app:pcv_textSize="@dimen/md_24"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!-- Summary-->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_records"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/md_50"
                        android:layout_marginTop="@dimen/md_25"
                        android:layout_marginBottom="@dimen/md_25"
                        app:layout_constraintTop_toBottomOf="@id/cl_circle_progress"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                        <!-- Left Record-->
                        <LinearLayout
                            android:id="@+id/ll_left_record"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toLeftOf="@id/ll_center_divider"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textAppearance="@style/StaticRecordTitle"
                                android:text="@string/winning_rate_label" />

                            <TextView
                                android:id="@+id/tv_left_record"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textAppearance="@style/StaticRecordData"
                                android:text="@string/w_d_l" />
                        </LinearLayout>

                        <!-- Center Divider-->
                        <LinearLayout
                            android:id="@+id/ll_center_divider"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent" >

                            <View
                                android:layout_width="@dimen/md_1"
                                android:layout_height="match_parent"
                                android:background="@color/grey_400" />
                        </LinearLayout>

                        <!-- Right Record-->
                        <LinearLayout
                            android:id="@+id/ll_right_record"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toRightOf="@id/ll_center_divider"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintRight_toRightOf="parent" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textAppearance="@style/StaticRecordTitle"
                                android:text="@string/watching_count" />

                            <TextView
                                android:id="@+id/tv_right_record"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textAppearance="@style/StaticRecordData"
                                android:text="@string/seeing_count_season" />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <!-- 팀별통산승률-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_box_team_per"
                android:layout_width="match_parent"
                android:layout_height="@dimen/md_0"
                android:layout_marginTop="@dimen/md_25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_box_summary" >

                <TextView
                    android:id="@+id/tv_team_per"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textAppearance="@style/PageTitle"
                    android:text="@string/record_team_percentage" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_today_game"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_0"
                    android:layout_marginTop="@dimen/md_10"
                    android:background="@drawable/border_line_list"
                    app:layout_constraintTop_toBottomOf="@id/tv_team_per"
                    app:layout_constraintBottom_toBottomOf="parent" >

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_team_per_list"
                        android:background="@drawable/border_line_list"
                        android:paddingTop="@dimen/md_5"
                        android:paddingBottom="@dimen/md_5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- 로딩중-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" >

                <com.github.ybq.android.spinkit.SpinKitView
                    android:id="@+id/sk_loading"
                    style="@style/SpinKitView.Large.ThreeBounce"
                    android:layout_width="@dimen/md_40"
                    android:layout_height="@dimen/md_40"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:SpinKit_Color="@color/red_400" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>